feat: initial SemiCircle implementation